--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ div {
     /* direction: rtl; */
     display: flex; 
     justify-content: space-around; 
+    /* flex-direction: column;  */
     /* background-color: yellow */ */
 }
 
