--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ img {
 } */
 
 h2 {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    color: black;
+    font-size: 2rem;
+    line-height: 2rem;;
+    color: black; 
     display: flex; 
-    justify-content: center;
+    justify-content: left;
 }
 h1 {
     font-size: 2rem;
