--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ img {
     padding-left: 50px;
     padding-top: 50px;
     margin-right: 100px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 /* p {
@@ -227,6 +229,7 @@ body {
     padding: 0px;
     display: flex;
     justify-content: space-between; 
+    flex-wrap: wrap; 
     margin: 5px;
     width: 350px;
     height: 350px; 
